# regime-detection-agent

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
.github/workflows/: daily_run.yml
config/: config.yaml
data/processed/: features.parquet
data/raw/: close_prices.parquet  macro.parquet  vix.parquet  volumes.parquet
reports/: 2026-06-26_daily_note.md  2026-06-26_metadata.json  2026-06-29_daily_note.md  2026-06-29_metadata.json  2026-06-30_daily_note.md  2026-06-30_metadata.json  2026-07-01_daily_note.md  2026-07-01_metadata.json  2026-07-02_daily_note.md  2026-07-02_metadata.json  2026-07-06_daily_note.md  2026-07-06_metadata.json  2026-07-07_daily_note.md  2026-07-07_metadata.json  2026-07-08_daily_note.md  2026-07-08_metadata.json  2026-07-09_daily_note.md  2026-07-09_metadata.json  2026-07-10_daily_note.md  2026-07-10_metadata.json  2026-07-13_daily_note.md  2026-07-13_metadata.json  2026-07-14_daily_note.md  2026-07-14_metadata.json  2026-07-15_daily_note.md  2026-07-15_metadata.json  2026-07-17_daily_note.md  2026-07-17_metadata.json  2026-07-20_daily_note.md  2026-07-20_metadata.json  2026-07-21_daily_note.md  2026-07-21_metadata.json  2026-07-22_daily_note.md  2026-07-22_metadata.json  2026-07-23_daily_note.md  2026-07-23_metadata.json  regime_history.csv
scripts/: run_daily.py
src/regime_agent/: evaluation.py  features.py  ingestion.py  llm.py  orchestrator.py  regimes.py  report.py  (+1 more)
templates/: daily_note.md.j2
tests/: conftest.py  test_evaluation.py  test_features.py  test_llm.py  test_pipeline_smoke.py  test_regimes.py
