[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "regime-agent"
version = "0.1.0"
description = "Autonomous multi-agent research pipeline for daily market regime detection"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "anthropic>=0.40.0",
    "yfinance>=0.2.40",
    "pandas>=2.0",
    "pyarrow>=16.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "hmmlearn>=0.3.2",
    "pandas-datareader>=0.10",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
    "tabulate>=0.9",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
